stabalize more, adjust player connection logic and mroe